src/scss/primitives/_sidebar.scss
@use "sass:math";

.with-sidebar {
    overflow: hidden;

    > * {
        display: flex;
        flex-wrap: wrap;
        margin: calc(var(--s2) / 2 * -1);
    }

    > * > * {
        margin: calc(var(--s2) / 2);
        flex-grow: 1;
    }

    > * > :last-child {
        @media (max-width: 40em) {
            flex-basis: auto;
        }
        flex-basis: 0;
        flex-grow: 999;
        min-width: 40%;
    }
}

